make responsive, fix spacing issue

--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body,html {
  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
  -webkit-font-smoothing:antialiased;
  background: url(./images/bg.jpg);
+ background-attachment: fixed;
  background-size: cover;
+ height: 100vh;
  color: #ffffff;
  line-height:1;
  margin:0;
@@ -46,23 +48,23 @@ a:hover {
   text-transform: uppercase;
 }
 
-.center {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 960px;
+  padding-top: 200px;
 }
 
 .container {
-  min-width: 960px;
-  flex-basis: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 .container > div {
-  width: 33%;
+  max-width: 100%;
+  min-width: 250px;
   padding: 20px;
   flex: 1;
 }
